package com.niyaj.popos.features.address.domain.util

object AddressTestTags {

    //Address Screen
    const val ADDRESS_SEARCH_BAR = "Address Search Bar"

    //Add Edit Address Screen Tags
    const val ADDRESS_SHORT_NAME_FIELD = "Short Name"
    const val ADDRESS_SHORT_NAME_ERROR = "Short Name Error"
    const val ADDRESS_FULL_NAME_FIELD = "Full Address"
    const val ADDRESS_FULL_NAME_ERROR = "Full Name Error"
    const val CREATE_UPDATE_ADDRESS_BUTTON = "CreateOrUpdate Address"
}