<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_icon">Edit Item</string>
    <string name="app_name">Popos</string>
    <string name="app_description">Restaurant POS Application.</string>
    <string name="logo_description">Popos Highlight</string>
    <string name="password_visible_content_description">Password Visible</string>
    <string name="password_hidden_content_description">Password Hidden</string>
    <string name="create_order">Create Order</string>
    <string name="back">Navigate Back</string>
    <string name="search_icon">Search Icon</string>
    <string name="popos_highlight">Popos Highlight</string>
    <string name="increaseQuantity">Increase Quantity</string>
    <string name="decreaseQuantity">Decrease Quantity</string>
    <string name="add_items_to_cart_button">Add Items to cart</string>
    <string name="add_icon">Add Icon</string>
    <string name="cart_screen">Cart Screen</string>
    <string name="edit_cart_order">Update Order Details</string>
    <string name="edit_category">Edit Category</string>
    <string name="create_category">Create New Category</string>
    <string name="no_items_in_category">Categories Not Available</string>
    <string name="no_items_in_product">Products Not Available</string>
    <string name="create_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="filter_product">Filter Product</string>
    <string name="edit_address">Update Address</string>
    <string name="create_address">Add New Address</string>
    <string name="create_customer">Add New Customer</string>
    <string name="no_items_in_customers">Customers Not Found</string>
    <string name="no_items_in_address">Address Not Found</string>
    <string name="edit_customer">Update Customer Details</string>
    <string name="create_new_order">Create New Order</string>
    <string name="close_icon">Close Icon</string>
    <string name="no_items_in_order">You have not placed any order today.</string>
    <string name="filter_order">Filter Orders</string>
    <string name="search_item_not_found">Searched Item Not Found</string>
    <string name="print_order">Print Order</string>
    <string name="filter_address">Filter Address</string>
    <string name="create_new_add_on">Create New AddOn</string>
    <string name="filter_add_on_item">Filter AddOn Item</string>
    <string name="edit_add_on_item">Update AddOn Item</string>
    <string name="no_items_in_addon">AddOn Items Not Found</string>
    <string name="filter_charges_item">Filter Charges Item</string>
    <string name="no_items_in_charges">Charges not found</string>
    <string name="create_new_employee">Add New Employee</string>
    <string name="update_employee">Update Employee Details</string>
    <string name="create_new_partner">Add New Partner</string>
    <string name="update_partner">Update Partner Details</string>
    <string name="create_new_expenses_category">Create New Category</string>
    <string name="filter_expenses_category">Filter Expenses Category</string>
    <string name="filter_employee">Filter Employee</string>
    <string name="update_expenses_category">Update Expenses Category</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="update_expense">Update Expense Entry</string>
    <string name="no_items_in_employee">Employee Not Found</string>
    <string name="no_items_in_expenses_category">Expenses Category Not Found</string>
    <string name="filter_delivery_partner">Filter Delivery Partner</string>
    <string name="no_items_in_partner">Delivery Partner Not Found</string>
    <string name="no_item_in_expenses">Expenses Not Available</string>
    <string name="delete_partner_message">Make sure partner is not currently logged in and all data must be deleted before taking this action.</string>
    <string name="delete_employee_msg">Are you sure to delete employee, this action can not be undone..</string>
    <string name="delete_expenses_category_msg">Make sure to delete all expanses before this action will take, otherwise it will occur some issues on your app..</string>
    <string name="dine_in_orders_not_found">DineIn Orders Not Available..</string>
    <string name="dine_out_orders_not_found">DineOut Orders Not Available..</string>
    <string name="order_details">View Order Details</string>
    <string name="delete_order_msg">Are you sure to delete this order, this action cannot be undone.</string>
    <string name="toggle_menu">Toggle Menu</string>
    <string name="delete_category_message">Are you sure to delete this category?</string>
    <string name="delete_product_message">Are you sure to delete these products?</string>
    <string name="delete_add_on_item_message">Are you sure to delete these addon items?</string>
    <string name="delete_address_message">Are you sure to delete these address.</string>
    <string name="cart_order_is_empty">Seems like you place all order or have not created any order today!</string>
    <string name="delete_customer_message">Are you sure to delete these customers?</string>
    <string name="delete_expenses_msg">Are you sure to delete this expenses?</string>
    <string name="increase_product_price">Increase Product Price</string>
    <string name="decrease_product_price">Decrease Product Price</string>
    <string name="import_products">Import Products</string>
    <string name="export_products">Export Products</string>
    <string name="open_file">Open File</string>
    <string name="update_salary_entry">Update Salary Entry</string>
    <string name="create_salary_entry">Add Payment Entry</string>
    <string name="delete_salary_msg">Are you sure to delete this salary entry?</string>
    <string name="no_items_in_salary">Salary Entry Not Found.</string>
    <string name="update_absent_entry">Update Absent Entry</string>
    <string name="create_absent_entry">Add Absent Entry</string>
    <string name="delete_absent_message">Are you sure to delete absent report</string>
    <string name="no_items_in_absent">Employee Absent Report Not Found.</string>
    <string name="delete_past_expenses_msg">Are you sure to delete past expenses?</string>
    <string name="delete_all_expenses_msg">Are you sure to delete all expenses including today?</string>

    <string name="data_deletion_settings">Data Deletion Settings</string>
    <string name="update_deletion_settings">Update Deletion Settings</string>
    <string name="delete_all_records">Are you sure to delete all records including today?</string>
    <string name="delete_past_records">Are you sure to delete all past records excluding today?</string>
    <string name="delete_settings_msg">"All value consider as days, 0 means data will be deleted from today start time."</string>

    <string name="select_cart_order">Select Cart Order</string>
    <string name="update_restaurant_info">Update Restaurant Info</string>
    <string name="import_customers">Import Customers</string>
    <string name="customer_settings">Customer Setting Screen</string>
    <string name="delete_all_customers">Are you sure to delete all customer including of his all orders?</string>
    <string name="no_bluetooth_devices_available">Bluetooth printers is not available in this device.</string>
    <string name="addon_name_field">AddOn Name</string>
    <string name="addon_price_field">AddOn Price</string>
    <string name="addon_add_edit_button">AddEdit AddOn Item Button</string>
    <string name="filter_category">Filter Category</string>
    <string name="filter_customer">Filter Customer</string>
    <string name="employee_details">View Employee Details</string>
    <string name="mail_subject">Popos Crash Report</string>
    <string name="mail_body">Check out why your application has been crashes.</string>
    <string name="toast_text">Popos Application Has Been Crashed.</string>
    <string name="notification_title">Application Crashed..</string>
    <string name="notification_text">Due to some error your application has been crashed.</string>
    <string name="notification_channel">ArcaNotificationChannel</string>
    <string name="notification_channel_desc">ArcaNotificationDescription</string>
    <string name="notification_send">Send Report</string>
    <string name="notification_discard">Discard</string>
    <string name="update_reminder_state">Are you sure to update reminder state as not completed.</string>
    <string name="delete_reminder">Are you sure to delete reminder?</string>
    <string name="setting_icon">Settings Icon</string>
    <string name="export_customers">Export Customers</string>
    <string name="delete_all_addresses">Are you sure to delete all addresses? Make sure to export all addresses before deleting.</string>
    <string name="import_addresses">Import Addresses</string>
    <string name="export_addresses">Export Addresses</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://niyajali.github.io/.well-known/assetlinks.json\" }]</string>

    <string name="update_printer_info">Update Printer Info</string>

    <!-- Developer Details   -->
    <string name="developer_name">Sk Niyaj Ali</string>
    <string name="developer_email">niyaj639@gmail.com</string>
    <string name="developer_profile">https://github.com/niyajali</string>
    <string name="application_id">Popos-Pos Application</string>
    <string name="version_name">V1.1</string>
    <string name="version_code">6</string>

    <!-- Import File Notes   -->
    <string name="address_import_note">Make sure to open a address.json file.</string>
    <string name="customer_import_note">Make sure to open customer.json file.</string>
    <string name="contact_import_note">Make sure to open contact.json file.</string>
    <string name="product_import_note">Make sure to open product.json file.</string>
    <string name="expenses_import_note">Make sure to open expenses.json file.</string>
    <string name="cartorder_message">Only pending orders will be shown by default, if you want to see all orders including placed and other date then click on right corner then click view all to see all orders.</string>
    <string name="main_feed_empty_product">You did not add any product yet, click below button to create new products.</string>

    <string name="printer_note_one">First paired bluetooth printer will be connected automatically.</string>
    <string name="printer_note_two">Do not worry about connection status, click on test print button to print test data.</string>
    <string name="printer_note_three">If you did not uploaded the print logo then default logo will be used for printing.</string>
    <string name="printer_note_four">Print some order bill and check how it\'s look, if it\'s look weird then change printer info accordingly.</string>

</resources>