...
            }else{
                navController.navigateUp()
            }
        },
        title = {
            if (selectedAddress.isEmpty()) {
                Text(text = "Addresses")
            } else if(selectedAddress.size > 1){
                Text(text = "${selectedAddress.size} Selected")
            }
        },
        isFloatingActionButtonDocked = addresses.isNotEmpty(),
        floatingActionButton = {
...
                        onClick = {
                            navController.navigate(AddEditAddressScreenDestination(addressId = selectedAddress.first()))
                        },
                    ){
                        Icon(
                            imageVector = Icons.Default.Edit,
                            contentDescription = "Edit Address",
                            tint = MaterialTheme.colors.onPrimary,
                        )
                    }
                }

                IconButton(
...
                        deleteAddressState.show()
                    },
                    enabled = selectedAddress.isNotEmpty()
                ){
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Delete Address",
                        tint = MaterialTheme.colors.onPrimary,
                    )
                }

                IconButton(
                    onClick = {
                        addressViewModel.onAddressEvent(AddressEvent.SelectAllAddress)
                    },
                    enabled = selectedAddress.isNotEmpty()
                ){
                    Icon(
                        imageVector = Icons.Default.Rule,
                        contentDescription = "Select All Address",
                        tint = MaterialTheme.colors.onPrimary,
                    )
                }
            }
            else if(showSearchBar){
                StandardSearchBar(
...
